--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
     src: url(../fonts//Poppins-Regular.otf);
 }
 
-:root{
+:root {
     --color-background: #fffdf7;
     --color-black: #212121;
     --color-text: #4f4f4f;
@@ -19,16 +19,17 @@
     --color-red: #e74c3c;
     --color-green: #2ecc71;
     --color-separete: #cccccc;
-    }
+}
 
 
-html, body{
+html,
+body {
     font-family: "PoppinsRegular", "Rubik", sans-serif;
     background-color: var(--color-background);
     color: var(--color-text);
 }
 
-.color-primary{
+.color-primary {
     color: var(--color-primary);
 }
 
@@ -55,15 +56,16 @@ a.navbar-brand {
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
-.btn-white.active, .btn-white:hover {
+.btn-white.active,
+.btn-white:hover {
     background-color: var(--color-primary);
 }
 
-.btn-icon{
+.btn-icon {
     padding-right: 75px;
 }
 
-.btn-icon .icon{
+.btn-icon .icon {
     display: inline-block;
     color: var(--color-black);
     background-color: var(--color-white);
@@ -136,7 +138,7 @@ a.navbar-brand {
     width: 50px;
 }
 
-.card-banner{
+.card-banner {
     height: 450px;
     width: 450px;
     border-radius: 170px;
@@ -175,5 +177,52 @@ a.navbar-brand {
     color: var(--color-primary);
     right: 20px;
     bottom: 10px;
+}
 
+.servicos {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.hint-title {
+    color: var(--color-primary);
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.title {
+    color: var(--color-black);
+    font-size: 40px;
+    margin-top: 5px;
+    margin-bottom: 30px;
+}
+
+.card-icon {
+    height: 150px;
+    margin: 0 auto;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-text {
+    color: var(--color-text-out);
+    font-size: 15px;
+    padding: 0px 30px;
+}
+
+.card-text p {
+    font-size: 22px;
+    color: var(--color-black);
+    margin-bottom: 10px;
+}
+
+.background-servicos {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-image: url(../img/bg-icons-2.png);
 }
