--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,6 @@
     --color-separete: #cccccc;
 }
 
-
 html,
 body {
     font-family: "PoppinsRegular", "Rubik", sans-serif;
@@ -36,6 +35,10 @@ body {
 
 b {
     font-family: "PoppinsRegular", "Rubik", sans-serif;
+}
+
+.hidden {
+    display: none !important;
 }
 
 a.navbar-brand {
@@ -298,7 +301,7 @@ a.navbar-brand {
     cursor: pointer;
 }
 
-.add-numero-itens{
+.add-numero-itens {
     color: var(--color-black-heavy);
     padding: 2px 15px;
     border-top: 2px solid var(--color-black-heavy);
@@ -320,15 +323,108 @@ a.navbar-brand {
     background-color: var(--color-primary);
 }
 
-.card-item:hover .title-produto{
+.card-item:hover .title-produto {
     display: none;
 }
 
-.card-item:hover .add-carrinho{
+.card-item:hover .add-carrinho {
     display: flex;
 }
 
-.card-item:hover .price-produto{
+.card-item:hover .price-produto {
     color: var(--color-black-heavy) !important;
     margin-top: 20px;
 }
+
+.depoimentos {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.card-depoimentos {
+    height: 390px;
+    width: 390px;
+    border-radius: 120px;
+    background-color: var(--color-secondary);
+    position: absolute;
+    left: 0;
+}
+
+.container-dados-depoimento {
+    display: flex;
+}
+
+.depoimento {
+    margin-top: 70px;
+}
+
+.background-depoimentos {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-image: url(../img/bg-icons-1.png);
+}
+
+.imagem-depoimento {
+    width: 65px;
+    height: 65px;
+    background-color: var(--color-white);
+    border-radius: 50px;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 15px;
+}
+
+#depoimento-1 .imagem-depoimento {
+    background-image: url(../img/diego.jpg);
+    background-size: cover;
+}
+
+.nome-depoimento {
+    color: var(--color-black);
+    font-size: 22px;
+    margin-bottom: 5px;
+}
+
+.nota-depoimento {
+    color: var(--color-primary);
+}
+
+.nota-depoimento span {
+    color: var(--color-black);
+}
+
+.texto-depoimento {
+    display: flex;
+    font-size: 16px;
+    color: var(--color-black);
+}
+
+.texto-depoimento i {
+    font-size: 35px;
+    color: var(--color-primary);
+}
+
+.texto-depoimento i:first-child {
+    padding-left: 10px;
+    padding-right: 35px;
+}
+
+.texto-depoimento i:last-child {
+    padding-left: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+
+#depoimento-2 .imagem-depoimento {
+    background-image: url(../img/ana.jpg);
+    background-size: cover;
+}
+
+#depoimento-3 .imagem-depoimento {
+    background-image: url(../img/joao.jpg);
+    background-size: cover;
+}
+
